--- a/app/views/admin/admins/index.html.erb
+++ b/app/views/admin/admins/index.html.erb
@@ -20,7 +20,7 @@
     <h4 class="card-title">Reservations</h4>
     <br>
     <a href="<%= admin_bookings_path %>" class="btn btn-primary btn-just-icon">
-      <i class="fas fa-cat"></i>
+      <i class="fas fa-poll-h"></i>
     </a>
   </div>
 </div>
