--- a/app/views/layouts/_navbartransparent.html.erb
+++ b/app/views/layouts/_navbartransparent.html.erb
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-expand-lg fixed-top navbar-transparent " color-on-scroll="450">
+<nav class="navbar navbar-expand-lg fixed-top navbar-transparent " color-on-scroll="100">
    <div class="container">
      <div class="navbar-translate">
-       <a class="navbar-brand" href="<%= root_path %>" rel="tooltip" title="Coded by Creative Tim" data-placement="bottom" target="_blank" style="font-size:28px">   The Kite House Project
+       <a class="navbar-brand" href="<%= root_path %>" rel="tooltip" title="Coded by Creative Tim" data-placement="bottom" target="_blank" style="font-size:28px"><i class="fa fa-play"></i>   The Kite House Project
        </a>
        <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
          <span class="navbar-toggler-bar bar1"></span>
