--- a/app/views/admin/hostels/index.html.erb
+++ b/app/views/admin/hostels/index.html.erb
@@ -6,7 +6,7 @@
   </div>
   <div class="card mx-auto" style="width: 20rem;">
   <div class="card-body">
-    <p><i class="fas fa-users fa-3x mx-3"></i>Hotel actuel : <%= @hostels.count %></p>
+    <p><i class="fas fa-hotel fa-3x mr-3"></i>Hotel actuel : <%= @hostels.count %></p>
   </div>
 </div>
 <div class="align-text">
